@@ -1,3 +1,8 @@
+2021-11-30  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pvm-val.c (pvm_array_set): Avoid calculating the size of
+	the remaining elements of the array.
+
 2021-11-29  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-ast.c (pkl_type_append_to): Generate syntactically
